[package]
name = "xdp-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = [] }
aya-log = { git = "https://github.com/aya-rs/aya" }
log = "0.4"
libc = "0.2"
anyhow = "1.0.81"
simple_logger = "4.3.3"
clap = { version = "4.5.4", features = ["derive"] }
# ctrlc = "3.4.5"
